added CSS variables for colors

--- a/sass/modules/footer-menu.scss
+++ b/sass/modules/footer-menu.scss
@@ -21,23 +21,21 @@
 	margin: 0;
 	padding: 1.2em;
 	text-decoration: none;
-	font-weight: normal;
 	font-size: 15px;
 	font-size: 0.9375rem;
-	font-family: 'Magra', Tahoma, Arial;
 	-webkit-transition: all 0.2s ease;
 	transition: all 0.2s ease;
 }
 
 .footer-navigation-menu a:link,
 .footer-navigation-menu a:visited {
-	color: #fff;
+	@include color(--footer-link-color);
 	text-decoration: none;
 }
 
 .footer-navigation-menu a:hover,
 .footer-navigation-menu a:active {
-	color: rgba(255,255,255,0.5);
+	@include color(--footer-link-hover-color);
 }
 
 @media only screen and (max-width: 60em) {
@@ -63,7 +61,8 @@
 @media only screen and (max-width: 40em) {
 	.footer-navigation {
 		padding-bottom: 1.5em;
-		border-bottom: 1px solid rgba(255,255,255,0.05);
+		border-bottom: 1px solid;
+		@include border-color(--footer-widgets-border-color);
 	}
 
 	.footer-navigation-menu li,
