--- a/sass/modules/footer-widgets.scss
+++ b/sass/modules/footer-widgets.scss
@@ -1,7 +1,8 @@
 .footer-widgets-background {
 	padding: 2rem 0 0;
-	border-bottom: 1px solid rgba(255,255,255,0.05);
-	background: #454545;
+	border-bottom: 1px solid;
+	@include border-color(--footer-widgets-border-color);
+	@include background(--footer-widgets-background-color);
 }
 
 .footer-widgets {
@@ -23,8 +24,9 @@
 
 /* Footer Widget Styling */
 .footer-widgets .widget {
-	color: #fff;
-	border: 1px solid rgba(255,255,255,0.05);
+	@include color(--footer-widgets-text-color);
+	border: 1px solid;
+	@include border-color(--footer-widgets-border-color);
 	box-shadow: none;
 	background: none;
 }
@@ -34,19 +36,20 @@
 }
 
 .footer-widgets .widget-title {
-	color: #fff;
-	background: rgba(255,255,255,0.025);
-	border-bottom: 1px solid rgba(255,255,255,0.025);
+	@include color(--footer-widgets-text-color);
+	@include background(--footer-widgets-title-color);
+	border-bottom: 1px solid;
+	@include border-color(--footer-widgets-title-color);
 }
 
 .footer-widgets .widget a:link,
-.footer-widgets .widget a:visited  {
-	color: #fff;
+.footer-widgets .widget a:visited {
+	@include color(--footer-widgets-link-color);
 }
 
 .footer-widgets .widget a:hover,
-.footer-widgets .widget a:active  {
-	color: rgba(255,255,255,0.5);
+.footer-widgets .widget a:active {
+	@include color(--footer-widgets-link-hover-color);
 }
 
 @media only screen and (max-width: 75em) {
