--- a/sass/modules/scroll-to-top.scss
+++ b/sass/modules/scroll-to-top.scss
@@ -9,23 +9,26 @@
 	padding: 0;
 	right: 1.5em;
 	bottom: 1.5em;
-	background: #1177aa;
+	@include background(--button-color);
+	@include color(--button-text-color);
 	transition: none;
 }
 
 .scroll-to-top-button:focus,
 .scroll-to-top-button:active {
-	background: #1177aa;
+	@include background(--button-color);
+	@include color(--button-text-color);
 }
 
 .scroll-to-top-button:hover {
-	background: #454545;
+	@include background(--button-hover-color);
+	@include color(--button-hover-text-color);
 }
 
 .scroll-to-top-button:after {
 	display: inline-block;
 	margin: 0 0 0 3px;
-	color: #fff;
+	color: currentColor;
 	content: '\f432';
 	vertical-align: top;
 	text-decoration: inherit;
