--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,6 +13,7 @@
 --------------------------------------------------------------*/
 @import "../../../themes/treville/sass/_variables";
 @import "../../../themes/treville/sass/_mixins";
+@import "_root";
 
 /*--------------------------------------------------------------
 # Header Social Icons
