--- a/assets/css/treville-pro.css
+++ b/assets/css/treville-pro.css
@@ -11,6 +11,14 @@
 /*--------------------------------------------------------------
 # - CSS Variables
 --------------------------------------------------------------*/
+:root {
+	--footer-widgets-background-color: #454545;
+	--footer-widgets-title-color: rgba(255, 255, 255, 0.025);
+	--footer-widgets-text-color: #fff;
+	--footer-widgets-link-color: #fff;
+	--footer-widgets-link-hover-color: rgba(255, 255, 255, 0.5);
+	--footer-widgets-border-color: rgba(255, 255, 255, 0.05);
+}
 
 /*--------------------------------------------------------------
 # Header Social Icons
@@ -37,6 +45,7 @@
 .header-social-icons .social-icons-menu li a:hover,
 .header-social-icons .social-icons-menu li a:active {
 	color: rgba(255, 255, 255, 0.5);
+	color: var(--top-navi-hover-color);
 	text-decoration: none;
 }
 
@@ -68,7 +77,7 @@
 		display: inline-block;
 	}
 
-	.header-area .top-navigation-menu-wrap .social-icons-menu li a:before {
+	.header-area .top-navigation-menu-wrap .social-icons-menu li a::before {
 		font-size: 24px;
 	}
 }
@@ -78,37 +87,44 @@
 --------------------------------------------------------------*/
 .header-search {
 	display: none;
-	background: #fff;
+	background-color: #fff;
+	background-color: var(--navi-background-color);
 }
 
 .primary-navigation-wrap.toggled-on .header-search {
 	display: block;
-	border-top: 1px solid rgba(0, 0, 0, 0.2);
+	border-top: 1px solid;
+	border-color: rgba(0, 0, 0, 0.2);
+	border-color: var(--navi-border-color);
 }
 
 .header-search .search-form .search-field {
 	padding: 1em 1em 0.92em 1em;
 	min-width: 250px;
-	background: #fff;
+	background-color: #fff;
+	background-color: var(--navi-background-color);
 	border: none;
 }
 
 .header-search .search-form .search-submit {
 	margin: 1em;
 	padding: 0 0.4em;
-	background: #fff;
+	background-color: #fff;
+	background-color: var(--navi-background-color);
 	border: none;
 }
 
 .header-search .search-form .search-submit .genericon-search {
 	padding: 0;
 	color: #454545;
+	color: var(--navi-color);
 	font-size: 24px;
 }
 
 .header-search .search-form .search-submit:hover .genericon-search,
 .header-search .search-form .search-submit:active .genericon-search {
 	color: rgba(0, 0, 0, 0.5);
+	color: var(--navi-hover-color);
 }
 
 @media only screen and (min-width: 60em) {
@@ -119,7 +135,9 @@
 	}
 
 	.header-search .search-form .search-field {
-		border-left: 1px solid rgba(0, 0, 0, 0.1);
+		border-left: 1px solid;
+		border-color: rgba(0, 0, 0, 0.2);
+		border-color: var(--navi-border-color);
 	}
 }
 
@@ -299,7 +317,9 @@
 .entry-author {
 	margin: 0;
 	padding: 1.5rem;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	border-top: 1px solid;
+	border-color: rgba(0, 0, 0, 0.15);
+	border-color: var(--light-border-color);
 }
 
 .entry-author .author-avatar {
@@ -355,8 +375,11 @@
 --------------------------------------------------------------*/
 .footer-widgets-background {
 	padding: 2rem 0 0;
-	border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-	background: #454545;
+	border-bottom: 1px solid;
+	border-color: rgba(255, 255, 255, 0.05);
+	border-color: var(--footer-widgets-border-color);
+	background-color: #454545;
+	background-color: var(--footer-widgets-background-color);
 }
 
 .footer-widgets {
@@ -379,7 +402,10 @@
 /* Footer Widget Styling */
 .footer-widgets .widget {
 	color: #fff;
-	border: 1px solid rgba(255, 255, 255, 0.05);
+	color: var(--footer-widgets-text-color);
+	border: 1px solid;
+	border-color: rgba(255, 255, 255, 0.05);
+	border-color: var(--footer-widgets-border-color);
 	box-shadow: none;
 	background: none;
 }
@@ -390,18 +416,24 @@
 
 .footer-widgets .widget-title {
 	color: #fff;
-	background: rgba(255, 255, 255, 0.025);
-	border-bottom: 1px solid rgba(255, 255, 255, 0.025);
+	color: var(--footer-widgets-text-color);
+	background-color: rgba(255, 255, 255, 0.025);
+	background-color: var(--footer-widgets-title-color);
+	border-bottom: 1px solid;
+	border-color: rgba(255, 255, 255, 0.025);
+	border-color: var(--footer-widgets-title-color);
 }
 
 .footer-widgets .widget a:link,
 .footer-widgets .widget a:visited {
 	color: #fff;
+	color: var(--footer-widgets-link-color);
 }
 
 .footer-widgets .widget a:hover,
 .footer-widgets .widget a:active {
 	color: rgba(255, 255, 255, 0.5);
+	color: var(--footer-widgets-link-hover-color);
 }
 
 @media only screen and (max-width: 75em) {
@@ -478,10 +510,8 @@
 	margin: 0;
 	padding: 1.2em;
 	text-decoration: none;
-	font-weight: normal;
 	font-size: 15px;
 	font-size: 0.9375rem;
-	font-family: 'Magra', Tahoma, Arial;
 	-webkit-transition: all 0.2s ease;
 	transition: all 0.2s ease;
 }
@@ -489,12 +519,14 @@
 .footer-navigation-menu a:link,
 .footer-navigation-menu a:visited {
 	color: #fff;
+	color: var(--footer-link-color);
 	text-decoration: none;
 }
 
 .footer-navigation-menu a:hover,
 .footer-navigation-menu a:active {
 	color: rgba(255, 255, 255, 0.5);
+	color: var(--footer-link-hover-color);
 }
 
 @media only screen and (max-width: 60em) {
@@ -520,7 +552,9 @@
 @media only screen and (max-width: 40em) {
 	.footer-navigation {
 		padding-bottom: 1.5em;
-		border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+		border-bottom: 1px solid;
+		border-color: rgba(255, 255, 255, 0.05);
+		border-color: var(--footer-widgets-border-color);
 	}
 
 	.footer-navigation-menu li,
@@ -547,23 +581,32 @@
 	padding: 0;
 	right: 1.5em;
 	bottom: 1.5em;
-	background: #1177aa;
+	background-color: #1177aa;
+	background-color: var(--button-color);
+	color: #fff;
+	color: var(--button-text-color);
 	transition: none;
 }
 
 .scroll-to-top-button:focus,
 .scroll-to-top-button:active {
-	background: #1177aa;
+	background-color: #1177aa;
+	background-color: var(--button-color);
+	color: #fff;
+	color: var(--button-text-color);
 }
 
 .scroll-to-top-button:hover {
-	background: #454545;
+	background-color: #454545;
+	background-color: var(--button-hover-color);
+	color: #fff;
+	color: var(--button-hover-text-color);
 }
 
 .scroll-to-top-button:after {
 	display: inline-block;
 	margin: 0 0 0 3px;
-	color: #fff;
+	color: currentColor;
 	content: '\f432';
 	vertical-align: top;
 	text-decoration: inherit;
