--- a/sass/modules/header-bar.scss
+++ b/sass/modules/header-bar.scss
@@ -11,10 +11,12 @@
 	padding: 0.5em;
 	-webkit-transition: all 0.2s ease;
 	transition: all 0.2s ease;
+	@include color(--top-navi-color);
 }
 
 .header-social-icons .social-icons-menu li a::before {
 	font-size: 21px;
+	color: currentColor;
 }
 
 .header-social-icons .social-icons-menu li a:hover,
