--- a/assets/css/treville-pro-rtl.css
+++ b/assets/css/treville-pro-rtl.css
@@ -11,6 +11,14 @@
 /*--------------------------------------------------------------
 # - CSS Variables
 --------------------------------------------------------------*/
+:root {
+	--footer-widgets-background-color: #454545;
+	--footer-widgets-title-color: rgba(255, 255, 255, 0.025);
+	--footer-widgets-text-color: #fff;
+	--footer-widgets-link-color: #fff;
+	--footer-widgets-link-hover-color: rgba(255, 255, 255, 0.5);
+	--footer-widgets-border-color: rgba(255, 255, 255, 0.05);
+}
 
 /*--------------------------------------------------------------
 # Header Social Icons
@@ -24,26 +32,36 @@
 	display: block;
 }
 
-.header-social-icons .social-icons-menu li a {
-	padding: 0.5em;
-	-webkit-transition: all 0.2s ease;
-	transition: all 0.2s ease;
-}
-
-.header-social-icons .social-icons-menu li a::before {
-	font-size: 21px;
-}
-
-.header-social-icons .social-icons-menu li a:hover,
-.header-social-icons .social-icons-menu li a:active {
-	color: rgba(255, 255, 255, 0.5);
-	text-decoration: none;
-}
-
 @media only screen and (min-width: 60em) {
 	#masthead .header-social-icons {
 		display: block;
 		margin-right: 1.75em;
+	}
+}
+
+@media only screen and (max-width: 60em) {
+	.header-area .social-icons-navigation {
+		display: none;
+		float: none;
+		margin: 0;
+		padding: 0;
+	}
+
+	.header-area .top-navigation-menu-wrap .social-icons-menu {
+		float: right;
+		display: block;
+		text-align: center;
+		padding: 1.5em 0 0;
+		width: 100%;
+	}
+
+	.header-area .top-navigation-menu-wrap .social-icons-menu li {
+		float: none;
+		display: inline-block;
+	}
+
+	.header-area .top-navigation-menu-wrap .social-icons-menu li a::before {
+		font-size: 24px;
 	}
 }
 
@@ -52,37 +70,51 @@
 --------------------------------------------------------------*/
 .header-search {
 	display: none;
-	background: #fff;
+	background-color: #fff;
+	background-color: var(--navi-background-color);
 }
 
 .primary-navigation-wrap.toggled-on .header-search {
 	display: block;
-	border-top: 1px solid rgba(0, 0, 0, 0.2);
+	border-top: 1px solid;
+	border-color: rgba(0, 0, 0, 0.2);
+	border-color: var(--navi-border-color);
 }
 
 .header-search .search-form .search-field {
 	padding: 1em 1em 0.92em 1em;
 	min-width: 250px;
-	background: #fff;
+	color: #454545;
+	color: var(--navi-color);
+	background-color: #fff;
+	background-color: var(--navi-background-color);
 	border: none;
+}
+
+.header-search .search-form .search-field::placeholder {
+	color: rgba(0, 0, 0, 0.5);
+	color: var(--navi-hover-color);
 }
 
 .header-search .search-form .search-submit {
 	margin: 1em;
 	padding: 0 0.4em;
-	background: #fff;
+	background-color: #fff;
+	background-color: var(--navi-background-color);
 	border: none;
 }
 
 .header-search .search-form .search-submit .genericon-search {
 	padding: 0;
 	color: #454545;
+	color: var(--navi-color);
 	font-size: 24px;
 }
 
 .header-search .search-form .search-submit:hover .genericon-search,
 .header-search .search-form .search-submit:active .genericon-search {
 	color: rgba(0, 0, 0, 0.5);
+	color: var(--navi-hover-color);
 }
 
 @media only screen and (min-width: 60em) {
@@ -93,8 +125,54 @@
 	}
 
 	.header-search .search-form .search-field {
-		border-right: 1px solid rgba(0, 0, 0, 0.1);
+		border-right: 1px solid;
+		border-color: rgba(0, 0, 0, 0.2);
+		border-color: var(--navi-border-color);
 	}
+}
+
+/*--------------------------------------------------------------
+# Social Icons
+--------------------------------------------------------------*/
+.header-social-icons .social-icons-menu {
+	display: flex;
+	flex-flow: row wrap;
+	margin: 0;
+	padding: 0;
+	border: none;
+	list-style: none;
+}
+
+.header-social-icons .social-icons-menu li {
+	margin: 0;
+	padding: 0;
+	border: none;
+	list-style: none;
+}
+
+.header-social-icons .social-icons-menu li a {
+	display: flex;
+	margin: 0;
+	padding: 0.5em;
+	color: #fff;
+	color: var(--top-navi-color);
+	-webkit-transition: all 0.2s ease;
+	transition: all 0.2s ease;
+}
+
+.header-social-icons .social-icons-menu li a:hover,
+.header-social-icons .social-icons-menu li a:active {
+	color: rgba(255, 255, 255, 0.5);
+	color: var(--top-navi-hover-color);
+	text-decoration: none;
+}
+
+.header-social-icons .social-icons-menu li a .icon {
+	margin: 0;
+	width: 19px;
+	height: 19px;
+	vertical-align: top;
+	fill: currentColor;
 }
 
 /*--------------------------------------------------------------
@@ -174,292 +252,7 @@
 	font-size: 1.0625rem;
 }
 
-/*--------------------------------------------------------------
-# Author Bio
---------------------------------------------------------------*/
-.entry-author {
-	margin: 0;
-	padding: 1.5rem;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.entry-author .author-avatar {
-	float: right;
-	margin: 0 0 0.15em 1.5em;
-	max-width: 25%;
-}
-
-.entry-author .author-avatar img {
-	vertical-align: top;
-}
-
-.entry-author .author-heading .author-title {
-	display: inline-block;
-	margin: 0 0 0.25em 1em;
-	padding: 0;
-	font-size: 17px;
-	font-size: 1.0625rem;
-}
-
-.entry-author .author-heading .author-link {
-	display: inline-block;
-	margin: 0 0 0.5em;
-	font-size: 16px;
-	font-size: 1rem;
-}
-
-.entry-author .author-bio {
-	margin: 0;
-	font-size: 16px;
-	font-size: 1rem;
-}
-
-/*--------------------------------------------------------------
-# Footer Widgets
---------------------------------------------------------------*/
-.footer-widgets-background {
-	padding: 2rem 0 0;
-	border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-	background: #454545;
-}
-
-.footer-widgets {
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
-	margin-left: -2rem;
-}
-
-.footer-widget-column {
-	width: 25%;
-	padding-left: 2rem;
-	box-sizing: border-box;
-	-webkit-flex-grow: 1;
-	flex-grow: 1;
-}
-
-/* Footer Widget Styling */
-.footer-widgets .widget {
-	color: #fff;
-	border: 1px solid rgba(255, 255, 255, 0.05);
-	box-shadow: none;
-	background: none;
-}
-
-.footer-widgets .widget-header {
-	box-shadow: none;
-}
-
-.footer-widgets .widget-title {
-	color: #fff;
-	background: rgba(255, 255, 255, 0.025);
-	border-bottom: 1px solid rgba(255, 255, 255, 0.025);
-}
-
-.footer-widgets .widget a:link,
-.footer-widgets .widget a:visited {
-	color: #fff;
-}
-
-.footer-widgets .widget a:hover,
-.footer-widgets .widget a:active {
-	color: rgba(255, 255, 255, 0.5);
-}
-
-/*--------------------------------------------------------------
-# Footer Menu
---------------------------------------------------------------*/
-.footer-navigation {
-	float: left;
-}
-
-.footer-navigation-menu {
-	position: relative;
-	display: block;
-	margin: 0;
-	padding: 1.25em 0;
-	list-style-position: outside;
-	list-style-type: none;
-}
-
-.footer-navigation-menu li {
-	position: relative;
-	float: right;
-}
-
-.footer-navigation-menu a {
-	display: block;
-	margin: 0;
-	padding: 1.2em;
-	text-decoration: none;
-	font-weight: normal;
-	font-size: 15px;
-	font-size: 0.9375rem;
-	font-family: 'Magra', Tahoma, Arial;
-	-webkit-transition: all 0.2s ease;
-	transition: all 0.2s ease;
-}
-
-.footer-navigation-menu a:link,
-.footer-navigation-menu a:visited {
-	color: #fff;
-	text-decoration: none;
-}
-
-.footer-navigation-menu a:hover,
-.footer-navigation-menu a:active {
-	color: rgba(255, 255, 255, 0.5);
-}
-
-/*--------------------------------------------------------------
-# Scroll to Top Button
---------------------------------------------------------------*/
-.scroll-to-top-button {
-	z-index: 9999;
-	width: 45px;
-	height: 45px;
-	display: inline;
-	position: fixed;
-	cursor: pointer;
-	margin: 0 auto;
-	padding: 0;
-	left: 1.5em;
-	bottom: 1.5em;
-	background: #1177aa;
-	transition: none;
-}
-
-.scroll-to-top-button:focus,
-.scroll-to-top-button:active {
-	background: #1177aa;
-}
-
-.scroll-to-top-button:hover {
-	background: #454545;
-}
-
-.scroll-to-top-button:after {
-	display: inline-block;
-	margin: 0 3px 0 0;
-	color: #fff;
-	content: '\f432';
-	vertical-align: top;
-	text-decoration: inherit;
-	font-size: 28px;
-	font-family: 'Genericons';
-	line-height: 1;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-/*--------------------------------------------------------------
-# Media Queries
---------------------------------------------------------------*/
-
-/*--------------------------------------------------------------
-## Desktop Large ( < 1200px )
---------------------------------------------------------------*/
-@media only screen and (max-width: 75em) {
-	.footer-widgets-background {
-		padding: 1.5rem 0 0;
-	}
-
-	.footer-widgets {
-		margin-left: -1.5rem;
-	}
-
-	/* Default: Four Column Footer Widgets */
-	.footer-widget-column {
-		padding-left: 1.5rem;
-	}
-
-	.scroll-to-top-button {
-		left: 1em;
-		bottom: 1em;
-	}
-}
-
-/*--------------------------------------------------------------
-## Desktop Medium ( < 1040px )
---------------------------------------------------------------*/
-@media only screen and (max-width: 65em) {
-	/* Four Column Footer Widgets */
-	.footer-widget-column:nth-child(1):nth-last-child(4),
-	.footer-widget-column:nth-child(2):nth-last-child(3),
-	.footer-widget-column:nth-child(3):nth-last-child(2),
-	.footer-widget-column:nth-child(4):nth-last-child(1) {
-		width: 50%;
-	}
-}
-
-/*--------------------------------------------------------------
-## Desktop Small ( < 960px )
---------------------------------------------------------------*/
-@media only screen and (max-width: 60em) {
-	/* Header Social Icons */
-	.header-area .social-icons-navigation {
-		display: none;
-		float: none;
-		margin: 0;
-		padding: 0;
-	}
-
-	.header-area .top-navigation-menu-wrap .social-icons-menu {
-		float: right;
-		display: block;
-		text-align: center;
-		padding: 1.5em 0 0;
-		width: 100%;
-	}
-
-	.header-area .top-navigation-menu-wrap .social-icons-menu li {
-		float: none;
-		display: inline-block;
-	}
-
-	.header-area .top-navigation-menu-wrap .social-icons-menu li a:before {
-		font-size: 24px;
-	}
-
-	/* Footer Navigation */
-	.footer-navigation {
-		float: none;
-		text-align: center;
-	}
-
-	.footer-navigation-menu {
-		padding-bottom: 0;
-	}
-
-	.footer-navigation-menu li {
-		display: inline-block;
-		float: none;
-	}
-
-	.footer-navigation-menu a {
-		padding: 0.8em 1.2em;
-	}
-}
-
-/*--------------------------------------------------------------
-## Tablet Medium ( < 800px )
---------------------------------------------------------------*/
-@media only screen and (max-width: 50em) {
-	/* Three Column Footer Widgets */
-	.footer-widget-column:nth-child(1):nth-last-child(3),
-	.footer-widget-column:nth-child(2):nth-last-child(2),
-	.footer-widget-column:nth-child(3):nth-last-child(1) {
-		width: 100%;
-	}
-}
-
-/*--------------------------------------------------------------
-## Mobile Extra Large ( < 640px )
---------------------------------------------------------------*/
 @media only screen and (max-width: 40em) {
-	/* Magazine Widgets */
 	.widget-magazine-horizontal-box .magazine-grid-three-columns .post-column:last-child {
 		display: none;
 	}
@@ -476,28 +269,9 @@
 		font-size: 17px;
 		font-size: 1.0625rem;
 	}
-
-	/* Footer Navigation Menu */
-	.footer-navigation {
-		padding-bottom: 1.5em;
-		border-bottom: 1px solid rgba(255, 255, 255, 0.05);
-	}
-
-	.footer-navigation-menu li,
-	.footer-navigation-menu a {
-		display: block;
-	}
-
-	.footer-navigation-menu a {
-		padding: 0.6em 0;
-	}
 }
 
-/*--------------------------------------------------------------
-## Mobile Large ( < 560px )
---------------------------------------------------------------*/
 @media only screen and (max-width: 35em) {
-	/* Magazine Vertical Box Widget */
 	.widget-magazine-vertical-box .left-post,
 	.widget-magazine-vertical-box .small-posts {
 		float: none;
@@ -517,39 +291,9 @@
 	.widget-magazine-vertical-box .large-post .entry-meta {
 		display: block;
 	}
-
-	/* Footer Widgets */
-	.footer-widgets {
-		margin-left: 0;
-	}
-
-	#footer-widgets .footer-widget-column {
-		padding-left: 0;
-		width: 100%;
-	}
 }
 
-/*--------------------------------------------------------------
-## Mobile Medium ( < 480px )
---------------------------------------------------------------*/
 @media only screen and (max-width: 30em) {
-	/* Author Bio */
-	.entry-author .author-avatar {
-		float: none;
-		margin: 0 0 1em;
-		max-width: 100%;
-	}
-
-	.entry-author .author-heading .author-title {
-		display: block;
-		margin: 0 0 0.25em;
-	}
-
-	.entry-author .author-heading .author-link {
-		display: block;
-	}
-
-	/* Magazine Widgets */
 	.widget-magazine-horizontal-box .magazine-grid-three-columns .post-column:last-child {
 		display: block;
 	}
@@ -594,13 +338,309 @@
 	}
 }
 
-/*--------------------------------------------------------------
-## Mobile Small ( < 320px )
---------------------------------------------------------------*/
 @media only screen and (max-width: 20em) {
-	/* Magazine Widgets */
 	.widget-magazine-vertical-box .large-post .entry-title {
 		font-size: 15px;
 		font-size: 0.9375rem;
 	}
+}
+
+/*--------------------------------------------------------------
+# Author Bio
+--------------------------------------------------------------*/
+.entry-author {
+	margin: 0;
+	padding: 1.5rem;
+	border-top: 1px solid;
+	border-color: rgba(0, 0, 0, 0.15);
+	border-color: var(--light-border-color);
+}
+
+.entry-author .author-avatar {
+	float: right;
+	margin: 0 0 0.15em 1.5em;
+	max-width: 25%;
+}
+
+.entry-author .author-avatar img {
+	vertical-align: top;
+}
+
+.entry-author .author-heading .author-title {
+	display: inline-block;
+	margin: 0 0 0.25em 1em;
+	padding: 0;
+	font-size: 17px;
+	font-size: 1.0625rem;
+}
+
+.entry-author .author-heading .author-link {
+	display: inline-block;
+	margin: 0 0 0.5em;
+	font-size: 16px;
+	font-size: 1rem;
+}
+
+.entry-author .author-bio {
+	margin: 0;
+	font-size: 16px;
+	font-size: 1rem;
+}
+
+@media only screen and (max-width: 30em) {
+	.entry-author .author-avatar {
+		float: none;
+		margin: 0 0 1em;
+		max-width: 100%;
+	}
+
+	.entry-author .author-heading .author-title {
+		display: block;
+		margin: 0 0 0.25em;
+	}
+
+	.entry-author .author-heading .author-link {
+		display: block;
+	}
+}
+
+/*--------------------------------------------------------------
+# Footer Widgets
+--------------------------------------------------------------*/
+.footer-widgets-background {
+	padding: 2rem 0 0;
+	border-bottom: 1px solid;
+	border-color: rgba(255, 255, 255, 0.05);
+	border-color: var(--footer-widgets-border-color);
+	background-color: #454545;
+	background-color: var(--footer-widgets-background-color);
+}
+
+.footer-widgets {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	margin-left: -2rem;
+}
+
+.footer-widget-column {
+	width: 25%;
+	padding-left: 2rem;
+	box-sizing: border-box;
+	-webkit-flex-grow: 1;
+	flex-grow: 1;
+}
+
+/* Footer Widget Styling */
+.footer-widgets .widget {
+	color: #fff;
+	color: var(--footer-widgets-text-color);
+	border: 1px solid;
+	border-color: rgba(255, 255, 255, 0.05);
+	border-color: var(--footer-widgets-border-color);
+	box-shadow: none;
+	background: none;
+}
+
+.footer-widgets .widget-header {
+	box-shadow: none;
+}
+
+.footer-widgets .widget-title {
+	color: #fff;
+	color: var(--footer-widgets-text-color);
+	background-color: rgba(255, 255, 255, 0.025);
+	background-color: var(--footer-widgets-title-color);
+	border-bottom: 1px solid;
+	border-color: rgba(255, 255, 255, 0.025);
+	border-color: var(--footer-widgets-title-color);
+}
+
+.footer-widgets .widget a:link,
+.footer-widgets .widget a:visited {
+	color: #fff;
+	color: var(--footer-widgets-link-color);
+}
+
+.footer-widgets .widget a:hover,
+.footer-widgets .widget a:active {
+	color: rgba(255, 255, 255, 0.5);
+	color: var(--footer-widgets-link-hover-color);
+}
+
+@media only screen and (max-width: 75em) {
+	.footer-widgets-background {
+		padding: 1.5rem 0 0;
+	}
+
+	.footer-widgets {
+		margin-left: -1.5rem;
+	}
+
+	/* Default: Four Column Footer Widgets */
+	.footer-widget-column {
+		padding-left: 1.5rem;
+	}
+
+	.scroll-to-top-button {
+		left: 1em;
+		bottom: 1em;
+	}
+}
+
+@media only screen and (max-width: 65em) {
+	.footer-widget-column:nth-child(1):nth-last-child(4),
+	.footer-widget-column:nth-child(2):nth-last-child(3),
+	.footer-widget-column:nth-child(3):nth-last-child(2),
+	.footer-widget-column:nth-child(4):nth-last-child(1) {
+		width: 50%;
+	}
+}
+
+@media only screen and (max-width: 50em) {
+	.footer-widget-column:nth-child(1):nth-last-child(3),
+	.footer-widget-column:nth-child(2):nth-last-child(2),
+	.footer-widget-column:nth-child(3):nth-last-child(1) {
+		width: 100%;
+	}
+}
+
+@media only screen and (max-width: 35em) {
+	.footer-widgets {
+		margin-left: 0;
+	}
+
+	#footer-widgets .footer-widget-column {
+		padding-left: 0;
+		width: 100%;
+	}
+}
+
+/*--------------------------------------------------------------
+# Footer Menu
+--------------------------------------------------------------*/
+.footer-navigation {
+	float: left;
+}
+
+.footer-navigation-menu {
+	position: relative;
+	display: block;
+	margin: 0;
+	padding: 1.25em 0;
+	list-style-position: outside;
+	list-style-type: none;
+}
+
+.footer-navigation-menu li {
+	position: relative;
+	float: right;
+}
+
+.footer-navigation-menu a {
+	display: block;
+	margin: 0;
+	padding: 1.2em;
+	text-decoration: none;
+	font-size: 15px;
+	font-size: 0.9375rem;
+	-webkit-transition: all 0.2s ease;
+	transition: all 0.2s ease;
+}
+
+.footer-navigation-menu a:link,
+.footer-navigation-menu a:visited {
+	color: #fff;
+	color: var(--footer-link-color);
+	text-decoration: none;
+}
+
+.footer-navigation-menu a:hover,
+.footer-navigation-menu a:active {
+	color: rgba(255, 255, 255, 0.5);
+	color: var(--footer-link-hover-color);
+}
+
+@media only screen and (max-width: 60em) {
+	.footer-navigation {
+		float: none;
+		text-align: center;
+	}
+
+	.footer-navigation-menu {
+		padding-bottom: 0;
+	}
+
+	.footer-navigation-menu li {
+		display: inline-block;
+		float: none;
+	}
+
+	.footer-navigation-menu a {
+		padding: 0.8em 1.2em;
+	}
+}
+
+@media only screen and (max-width: 40em) {
+	.footer-navigation {
+		padding-bottom: 1.5em;
+		border-bottom: 1px solid;
+		border-color: rgba(255, 255, 255, 0.05);
+		border-color: var(--footer-widgets-border-color);
+	}
+
+	.footer-navigation-menu li,
+	.footer-navigation-menu a {
+		display: block;
+	}
+
+	.footer-navigation-menu a {
+		padding: 0.6em 0;
+	}
+}
+
+/*--------------------------------------------------------------
+# Scroll to Top Button
+--------------------------------------------------------------*/
+.scroll-to-top-button {
+	z-index: 9999;
+	width: 45px;
+	height: 45px;
+	display: inline;
+	position: fixed;
+	cursor: pointer;
+	margin: 0 auto;
+	padding: 0;
+	left: 1.5em;
+	bottom: 1.5em;
+	background-color: #1177aa;
+	background-color: var(--button-color);
+	color: #fff;
+	color: var(--button-text-color);
+	transition: none;
+}
+
+.scroll-to-top-button:focus,
+.scroll-to-top-button:active {
+	background-color: #1177aa;
+	background-color: var(--button-color);
+	color: #fff;
+	color: var(--button-text-color);
+}
+
+.scroll-to-top-button:hover {
+	background-color: #454545;
+	background-color: var(--button-hover-color);
+	color: #fff;
+	color: var(--button-hover-text-color);
+}
+
+.scroll-to-top-button .icon {
+	margin: 0.25rem 0 0;
+	width: 20px;
+	height: 20px;
+	vertical-align: top;
+	fill: currentColor;
 }
