Update JS tooling and Sass

--- a/sass/modules/footer-widgets.scss
+++ b/sass/modules/footer-widgets.scss
@@ -1,8 +1,10 @@
+@use "../_mixins";
+
 .footer-widgets-background {
 	padding: 2rem 0 0;
 	border-bottom: 1px solid;
-	@include border-color(--footer-widgets-border-color);
-	@include background(--footer-widgets-background-color);
+	@include mixins.border-color(--footer-widgets-border-color);
+	@include mixins.background(--footer-widgets-background-color);
 }
 
 .footer-widgets {
@@ -24,9 +26,9 @@
 
 /* Footer Widget Styling */
 .footer-widgets .widget {
-	@include color(--footer-widgets-text-color);
+	@include mixins.color(--footer-widgets-text-color);
 	border: 1px solid;
-	@include border-color(--footer-widgets-border-color);
+	@include mixins.border-color(--footer-widgets-border-color);
 	box-shadow: none;
 	background: none;
 }
@@ -36,20 +38,20 @@
 }
 
 .footer-widgets .widget-title {
-	@include color(--footer-widgets-text-color);
-	@include background(--footer-widgets-title-color);
+	@include mixins.color(--footer-widgets-text-color);
+	@include mixins.background(--footer-widgets-title-color);
 	border-bottom: 1px solid;
-	@include border-color(--footer-widgets-title-color);
+	@include mixins.border-color(--footer-widgets-title-color);
 }
 
 .footer-widgets .widget a:link,
 .footer-widgets .widget a:visited {
-	@include color(--footer-widgets-link-color);
+	@include mixins.color(--footer-widgets-link-color);
 }
 
 .footer-widgets .widget a:hover,
 .footer-widgets .widget a:active {
-	@include color(--footer-widgets-link-hover-color);
+	@include mixins.color(--footer-widgets-link-hover-color);
 }
 
 @media only screen and (max-width: 75em) {
