--- a/sass/_root.scss
+++ b/sass/_root.scss
@@ -1,8 +1,11 @@
+@use "_mixins";
+@use "_variables";
+
 :root {
-	@include variable(--footer-widgets-background-color, $themeColors);
-	@include variable(--footer-widgets-title-color, $themeColors);
-	@include variable(--footer-widgets-text-color, $themeColors);
-	@include variable(--footer-widgets-link-color, $themeColors);
-	@include variable(--footer-widgets-link-hover-color, $themeColors);
-	@include variable(--footer-widgets-border-color, $themeColors);
+	@include mixins.variable(--footer-widgets-background-color, variables.$themeColors);
+	@include mixins.variable(--footer-widgets-title-color, variables.$themeColors);
+	@include mixins.variable(--footer-widgets-text-color, variables.$themeColors);
+	@include mixins.variable(--footer-widgets-link-color, variables.$themeColors);
+	@include mixins.variable(--footer-widgets-link-hover-color, variables.$themeColors);
+	@include mixins.variable(--footer-widgets-border-color, variables.$themeColors);
 }
