--- a/sass/modules/footer-menu.scss
+++ b/sass/modules/footer-menu.scss
@@ -1,3 +1,5 @@
+@use "../_mixins";
+
 .footer-navigation {
 	float: right;
 }
@@ -29,13 +31,13 @@
 
 .footer-navigation-menu a:link,
 .footer-navigation-menu a:visited {
-	@include color(--footer-link-color);
+	@include mixins.color(--footer-link-color);
 	text-decoration: none;
 }
 
 .footer-navigation-menu a:hover,
 .footer-navigation-menu a:active {
-	@include color(--footer-link-hover-color);
+	@include mixins.color(--footer-link-hover-color);
 }
 
 @media only screen and (max-width: 60em) {
@@ -62,7 +64,7 @@
 	.footer-navigation {
 		padding-bottom: 1.5em;
 		border-bottom: 1px solid;
-		@include border-color(--footer-widgets-border-color);
+		@include mixins.border-color(--footer-widgets-border-color);
 	}
 
 	.footer-navigation-menu li,
