--- a/sass/modules/widget-areas.scss
+++ b/sass/modules/widget-areas.scss
@@ -1,6 +1,8 @@
+@use "../_mixins";
+
 .before-header-widget-area,
 .after-header-widget-area,
-.before-footer-widget-area {
+.before-footer-columns-widget-area {
 	margin: 0 auto;
 	max-width: 1180px;
 }
@@ -10,8 +12,22 @@
 	padding: 2em 2em 0;
 }
 
-.before-footer-widget-area {
+.before-footer-columns-widget-area {
 	padding: 0 2em;
+}
+
+.before-footer-widget-area {
+	padding: 2em 2em 0;
+	border-bottom: 1px solid;
+	@include mixins.border-color(--footer-widgets-border-color);
+	@include mixins.background(--footer-widgets-background-color);
+
+	.widget {
+		margin-inline: auto;
+		max-width: calc(1180px - 2*2em);
+		background: none;
+		border: none;
+	}
 }
 
 .after-header-widget-area {
@@ -22,11 +38,12 @@
 
 @media only screen and (max-width: 75em) {
 	.before-header-widget-area,
-	.after-header-widget-area {
+	.after-header-widget-area,
+	.before-footer-widget-area {
 		padding: 1.5em 1.5em 0;
 	}
 
-	.before-footer-widget-area {
+	.before-footer-columns-widget-area {
 		padding: 0 1.5em;
 	}
 }
